// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AgentsMdExporter > Snapshot tests > all severities (ERROR, WARN, INFO) output 1`] = `
"# AGENTS.md

**Version:** v1
**Generated by:** AlignTrue

This file contains rules and guidance for AI coding agents.

<!-- aligntrue:begin {"applies_to":["**/*"],"id":"security.no-secrets"} -->
## Rule: security.no-secrets

**ID:** security.no-secrets
**Severity:** ERROR
**Scope:** **/*

Never commit secrets or API keys to version control.
<!-- aligntrue:end {"id":"security.no-secrets"} -->
---

<!-- aligntrue:begin {"applies_to":["src/**/*.ts"],"id":"testing.require-tests"} -->
## Rule: testing.require-tests

**ID:** testing.require-tests
**Severity:** WARN
**Scope:** src/**/*.ts

All features should have tests.
<!-- aligntrue:end {"id":"testing.require-tests"} -->
---

<!-- aligntrue:begin {"applies_to":["**/*.ts"],"id":"style.prefer-const"} -->
## Rule: style.prefer-const

**ID:** style.prefer-const
**Severity:** INFO
**Scope:** **/*.ts

Use const instead of let when variables are not reassigned.
<!-- aligntrue:end {"id":"style.prefer-const"} -->
---

**Generated by AlignTrue**
Content Hash: 54936332c02b9fe00fd31c4400e21110c090c753b1428b381404a8c53d62f50e
"
`;

exports[`AgentsMdExporter > Snapshot tests > multiple rules golden output 1`] = `
"# AGENTS.md

**Version:** v1
**Generated by:** AlignTrue

This file contains rules and guidance for AI coding agents.

<!-- aligntrue:begin {"applies_to":["src/**/*.ts"],"id":"testing.require-tests"} -->
## Rule: testing.require-tests

**ID:** testing.require-tests
**Severity:** ERROR
**Scope:** src/**/*.ts

All features must have tests to ensure reliability.
<!-- aligntrue:end {"id":"testing.require-tests"} -->
---

<!-- aligntrue:begin {"applies_to":["README.md"],"id":"docs.update-readme"} -->
## Rule: docs.update-readme

**ID:** docs.update-readme
**Severity:** WARN
**Scope:** README.md

Keep README updated with significant changes.
<!-- aligntrue:end {"id":"docs.update-readme"} -->
---

<!-- aligntrue:begin {"applies_to":["**/*.{ts,js,json}"],"id":"style.use-prettier"} -->
## Rule: style.use-prettier

**ID:** style.use-prettier
**Severity:** INFO
**Scope:** **/*.{ts,js,json}

Format code with Prettier before committing.
<!-- aligntrue:end {"id":"style.use-prettier"} -->
---

**Generated by AlignTrue**
Content Hash: 0dc3903b2d85ad43fe7c811df31b821f95ce56c1c5421d80b1eb9b967a920c67
"
`;

exports[`AgentsMdExporter > Snapshot tests > multiple scopes merged output 1`] = `
"# AGENTS.md

**Version:** v1
**Generated by:** AlignTrue

This file contains rules and guidance for AI coding agents.

<!-- aligntrue:begin {"applies_to":["backend/api/**/*.ts"],"id":"backend.api-tests"} -->
## Rule: backend.api-tests

**ID:** backend.api-tests
**Severity:** ERROR
**Scope:** backend, backend/api/**/*.ts

All API endpoints must have integration tests.
<!-- aligntrue:end {"id":"backend.api-tests"} -->
---

<!-- aligntrue:begin {"applies_to":["apps/web/components/**/*.tsx"],"id":"frontend.component-tests"} -->
## Rule: frontend.component-tests

**ID:** frontend.component-tests
**Severity:** WARN
**Scope:** apps/web, apps/web/components/**/*.tsx

All React components should have unit tests.
<!-- aligntrue:end {"id":"frontend.component-tests"} -->
---

**Generated by AlignTrue**
Content Hash: df2a36398f20feabcd2b25be10895814c43447de21a37442d33000ece0d3fc29
"
`;

exports[`AgentsMdExporter > Snapshot tests > single rule golden output 1`] = `
"# AGENTS.md

**Version:** v1
**Generated by:** AlignTrue

This file contains rules and guidance for AI coding agents.

<!-- aligntrue:begin {"applies_to":["**/*.ts"],"id":"testing.require-tests"} -->
## Rule: testing.require-tests

**ID:** testing.require-tests
**Severity:** WARN
**Scope:** **/*.ts

All features must have tests.
<!-- aligntrue:end {"id":"testing.require-tests"} -->
---

**Generated by AlignTrue**
Content Hash: 93bb359ec451e9054d354df9198f51b76c6b6f79ca4f3b78dc49bc6fd0d80abf
"
`;

exports[`AgentsMdExporter > Snapshot tests > with vendor fields (fidelity notes included) 1`] = `
"# AGENTS.md

**Version:** v1
**Generated by:** AlignTrue

This file contains rules and guidance for AI coding agents.

<!-- aligntrue:begin {"applies_to":["**/*.ts"],"id":"testing.require-tests"} -->
## Rule: testing.require-tests

**ID:** testing.require-tests
**Severity:** WARN
**Scope:** **/*.ts

All features must have tests.
<!-- aligntrue:end {"id":"testing.require-tests"} -->
---

**Generated by AlignTrue**
Content Hash: efb14d589273bd909da8e0eaa4dd079b0cc2c4d2f0718ebe02b94d88cd26b4b3

**Fidelity Notes:**
- Vendor-specific metadata preserved but not active in universal format: copilot, cursor, vscode
"
`;
